--- a/credit_risk_models.ipynb
+++ b/credit_risk_models.ipynb
@@ -541,11 +541,372 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9312091883681999"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_model = LogisticRegression()\n",
+    "log_model.fit(X_train, Y_train)\n",
+    "log_model.score(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  0.931222562192364\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted= log_model.predict(X_test)\n",
+    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9396126428753562"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_model = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn_model.fit(X_train, Y_train)\n",
+    "knn_model.score(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  0.9245709724624185\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted= knn_model.predict(X_test)\n",
+    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9300562078025743"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_model = GaussianNB()\n",
+    "nb_model.fit(X_train, Y_train)\n",
+    "nb_model.score(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  0.930125049886923\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted= nb_model.predict(X_test)\n",
+    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9298233944191306"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ptn_model = Perceptron()\n",
+    "ptn_model.fit(X_train, Y_train)\n",
+    "ptn_model.score(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  0.9295596647598776\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted= ptn_model.predict(X_test)\n",
+    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear SVV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9311094112038669"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svc_model = LinearSVC()\n",
+    "svc_model.fit(X_train, Y_train)\n",
+    "svc_model.score(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  0.9310895303977651\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted= svc_model.predict(X_test)\n",
+    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stochastic Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9302557621312403"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sgd_model = SGDClassifier()\n",
+    "sgd_model.fit(X_train, Y_train)\n",
+    "sgd_model.score(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  0.930125049886923\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted= sgd_model.predict(X_test)\n",
+    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999778272968148"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt_model = DecisionTreeClassifier()\n",
+    "dt_model.fit(X_train, Y_train)\n",
+    "dt_model.score(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  0.8896833843288546\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted= dt_model.predict(X_test)\n",
+    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9998780501324819"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_model = RandomForestClassifier(n_estimators=100)\n",
+    "rf_model.fit(X_train, Y_train)\n",
+    "rf_model.score(X_train, Y_train)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predicted= rf_model.predict(X_test)\n",
+    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+   ]
   }
  ],
  "metadata": {
