--- a/credit_risk_models.ipynb
+++ b/credit_risk_models.ipynb
@@ -9,10 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "import warnings; warnings.simplefilter('ignore')\n",
     "# data analysis and wrangling\n",
     "import pandas as pd\n",
@@ -541,6 +543,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, X_train, Y_train):\n",
+    "    log_model = model\n",
+    "    log_model.fit(X_train, Y_train)\n",
+    "    print(\"Score is    :\",log_model.score(X_train, Y_train))\n",
+    "    return log_model\n",
+    "    \n",
+    "def predict_acc(log_model, X_test, Y_test):\n",
+    "    predicted= log_model.predict(X_test)\n",
+    "    print (\"Accuracy is :\", metrics.accuracy_score(Y_test,predicted))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -549,42 +568,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9312091883681999"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "log_model = LogisticRegression()\n",
-    "log_model.fit(X_train, Y_train)\n",
-    "log_model.score(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is  0.931222562192364\n"
+      "Score is    : 0.9312091883681999\n",
+      "Accuracy is : 0.931222562192364\n"
      ]
     }
    ],
    "source": [
-    "predicted= log_model.predict(X_test)\n",
-    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+    "model = LogisticRegression()\n",
+    "model = train(model, X_train, Y_train)\n",
+    "predict_acc(model, X_test, Y_test)"
    ]
   },
   {
@@ -596,42 +595,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9396126428753562"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "knn_model = KNeighborsClassifier(n_neighbors=3)\n",
-    "knn_model.fit(X_train, Y_train)\n",
-    "knn_model.score(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is  0.9245709724624185\n"
+      "Score is    : 0.9396126428753562\n",
+      "Accuracy is : 0.9245709724624185\n"
      ]
     }
    ],
    "source": [
-    "predicted= knn_model.predict(X_test)\n",
-    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+    "model = KNeighborsClassifier(n_neighbors=3)\n",
+    "model = train(model, X_train, Y_train)\n",
+    "predict_acc(model, X_test, Y_test)"
    ]
   },
   {
@@ -643,42 +622,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9300562078025743"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nb_model = GaussianNB()\n",
-    "nb_model.fit(X_train, Y_train)\n",
-    "nb_model.score(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is  0.930125049886923\n"
+      "Score is    : 0.9300562078025743\n",
+      "Accuracy is : 0.930125049886923\n"
      ]
     }
    ],
    "source": [
-    "predicted= nb_model.predict(X_test)\n",
-    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+    "model = GaussianNB()\n",
+    "model = train(model, X_train, Y_train)\n",
+    "predict_acc(model, X_test, Y_test)"
    ]
   },
   {
@@ -690,89 +649,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9298233944191306"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ptn_model = Perceptron()\n",
-    "ptn_model.fit(X_train, Y_train)\n",
-    "ptn_model.score(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is  0.9295596647598776\n"
+      "Score is    : 0.9298233944191306\n",
+      "Accuracy is : 0.9295596647598776\n"
      ]
     }
    ],
    "source": [
-    "predicted= ptn_model.predict(X_test)\n",
-    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+    "model = Perceptron()\n",
+    "model = train(model, X_train, Y_train)\n",
+    "predict_acc(model, X_test, Y_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear SVV"
+    "### Linear SVC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9311094112038669"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "svc_model = LinearSVC()\n",
-    "svc_model.fit(X_train, Y_train)\n",
-    "svc_model.score(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is  0.9310895303977651\n"
+      "Score is    : 0.9310207203911265\n",
+      "Accuracy is : 0.9314886257815618\n"
      ]
     }
    ],
    "source": [
-    "predicted= svc_model.predict(X_test)\n",
-    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+    "model = LinearSVC()\n",
+    "model = train(model, X_train, Y_train)\n",
+    "predict_acc(model, X_test, Y_test)"
    ]
   },
   {
@@ -784,42 +703,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9302557621312403"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sgd_model = SGDClassifier()\n",
-    "sgd_model.fit(X_train, Y_train)\n",
-    "sgd_model.score(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is  0.930125049886923\n"
+      "Score is    : 0.9133490759525947\n",
+      "Accuracy is : 0.914759877610749\n"
      ]
     }
    ],
    "source": [
-    "predicted= sgd_model.predict(X_test)\n",
-    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+    "model = SGDClassifier()\n",
+    "model = train(model, X_train, Y_train)\n",
+    "predict_acc(model, X_test, Y_test)"
    ]
   },
   {
@@ -831,42 +730,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9999778272968148"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dt_model = DecisionTreeClassifier()\n",
-    "dt_model.fit(X_train, Y_train)\n",
-    "dt_model.score(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is  0.8896833843288546\n"
+      "Score is    : 0.9999778272968148\n",
+      "Accuracy is : 0.8891179992018092\n"
      ]
     }
    ],
    "source": [
-    "predicted= dt_model.predict(X_test)\n",
-    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+    "model = DecisionTreeClassifier()\n",
+    "model = train(model, X_train, Y_train)\n",
+    "predict_acc(model, X_test, Y_test)"
    ]
   },
   {
@@ -878,34 +757,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9998780501324819"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score is    : 0.9999445682420373\n",
+      "Accuracy is : 0.9326526539843022\n"
+     ]
     }
    ],
    "source": [
-    "rf_model = RandomForestClassifier(n_estimators=100)\n",
-    "rf_model.fit(X_train, Y_train)\n",
-    "rf_model.score(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted= rf_model.predict(X_test)\n",
-    "print (\"Accuracy is \", metrics.accuracy_score(Y_test,predicted))"
+    "model = RandomForestClassifier(n_estimators=100)\n",
+    "model = train(model, X_train, Y_train)\n",
+    "predict_acc(model, X_test, Y_test)"
    ]
   }
  ],
